--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,11 +23,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Step 2: Cache Composer dependencies (PHP vendor directory)
       - name: Cache Composer Dependencies
         uses: actions/cache@v4
         with:
@@ -36,7 +34,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php
 
-      # Step 3: Cache Bun dependencies (node_modules directory)
       - name: Cache Bun Dependencies
         uses: actions/cache@v4
         with:
@@ -45,7 +42,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node
 
-      # Step 4: Setup PHP environment
       - name: Setup PHP Environment
         uses: shivammathur/setup-php@v2
         with:
@@ -53,13 +49,11 @@ jobs:
           tools: composer:v2
           coverage: none
 
-      # Step 5: Setup Bun (JavaScript runtime)
       - name: Setup Bun Environment
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
-      # Step 6: Install dependencies and build the Jigsaw site
       - name: Build Jigsaw Website
         run: |
           bun install \
@@ -67,26 +61,24 @@ jobs:
           && bun run prod \
           && ./vendor/bin/jigsaw build production
 
-      # Step 7a: Configure GitHub Pages for deployment
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v4
 
-      # Step 7b: Upload the built site as an artifact for GitHub Pages deployment
       - name: Upload Artifact for GitHub Pages Deployment
         uses: actions/upload-pages-artifact@v3
         with:
           path: './build_production'
 
-      # Step 7c: Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
 
-      # Step 8a: Install Vercel CLI for Vercel deployment
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-      # Step 8b: Deploy to Vercel using CLI and secrets for authentication
+      - name: Build for Vercel Deployment
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
         env:
