--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages-and-vercel"
+  group: "pages"
   cancel-in-progress: false
 
 jobs:
@@ -19,14 +19,14 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    name: Build and Deploy Jigsaw Site
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Cache Composer Dependencies
+      - name: Cache Composer vendor
         uses: actions/cache@v4
         with:
           path: vendor
@@ -34,7 +34,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php
 
-      - name: Cache Bun Dependencies
+      - name: Cache Bun node_modules
         uses: actions/cache@v4
         with:
           path: node_modules
@@ -42,29 +42,29 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node
 
-      - name: Setup PHP Environment
+      - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: 8.3
           tools: composer:v2
           coverage: none
 
-      - name: Setup Bun Environment
+      - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
-      - name: Build Jigsaw Website
+      - name: Build Website
         run: |
           bun install \
           && composer install \
           && bun run prod \
           && ./vendor/bin/jigsaw build production
 
-      - name: Configure GitHub Pages
+      - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Upload Artifact for GitHub Pages Deployment
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: './build_production'
@@ -72,15 +72,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-      - name: Install Vercel CLI
-        run: npm install -g vercel
-
-      - name: Build for Vercel Deployment
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
-      - name: Deploy to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
