--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "tailwindcss": "^3.1.6"
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
         "aos": "^2.3.4",
         "sweetalert2": "^11.17.2"
     }
